# dpa-and-data-transfer-review

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_dpa.json
examples/: review-packet.json  review-packet.md
src/dpa_review/: __init__.py  checks.py  cli.py  review.py
tests/: test_review.py
